@startuml

skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

title Register User - Domain Model (US211)

hide circles
hide methods

package "User Management Subsystem" {

    class User {
        Email: id
        String: name
        String: phoneNumber
        Password: password
        boolean: active
    }

    class UserRole {
        String: id
        String: description
    }

    class Email {
        String: value
    }

    class Password {
        String: hashedValue
    }

    class UserRegistrationService {
        +registerUser(name, email, phone, role)
    }

    User "1" --> "1" Email
    User "1" --> "1" Password
    User "1" --> "1" UserRole
    UserRegistrationService --> User : creates >
    UserRegistrationService --> UserRole : validates >
}

@enduml
